editor: fix spinner jumping to top on page load

--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -23,7 +23,6 @@
 .pb-editor {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
 
     &-tablist {
         flex: none;
